@@ -1,0 +1,19 @@
+/*
+ * RoutingNotPossibleException.java (weberknecht)
+ *
+ * Copyright 2013 Patrick Mairif.
+ * The program is distributed under the terms of the Apache License (ALv2).
+ *
+ * tabstop=4, charset=UTF-8
+ */
+package de.highbyte_le.weberknecht.request.routing;
+
+/**
+ * routing not possible with the current URL
+ *
+ * @author pmairif
+ */
+@SuppressWarnings("serial")
+public class RoutingNotPossibleException extends Exception {
+
+}
