@@ -11,6 +11,8 @@ next (1.0):
 	- ReqUtil removed
 	- AreaCapableRouter now default
 	- sub areas introduced
+	- router interface extended by setConfig method
+	- LocalePrefixRouter added
 	- actions don't throw ServletExceptions any more.
 	- WebAction.getModels() throws ContentProcessingException
 	- execute() in actions without HttpServletResponse
@@ -22,7 +24,6 @@ next (1.0):
 	- syntax of weberknecht.xml changed
 	- error handlers
 	- error pages, configured via web.xml are used
-	- router interface extended by setConfig method
 
 0.12.2:
 	- bugfix: fixed null pointer exception, when routing didn't match.
